feat: support inscribe

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "bitcoinjs",
         "deployers",
         "depr",
-        "tailwindcss"
+        "tailwindcss",
+        "txid"
     ]
 }
