--- a/package.json
+++ b/package.json
@@ -6,18 +6,26 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "vitest",
     "lint": "next lint",
     "prebuild": "prisma generate",
-    "predev": "prisma generate"
+    "predev": "prisma generate",
+    "postinstall": "find ./node_modules/**/node_modules -type d -name 'bitcore-lib' -exec rm -r {} + && echo 'Deleted duplicate bitcore-libs'"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "^1.0.5",
     "@prisma/client": "^5.7.0",
+    "@unisat/ord-utils": "^0.4.0",
     "ahooks": "^3.7.8",
+    "bitcoinjs-lib": "^6.1.5",
+    "bitcore-lib": "^10.0.0",
+    "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
     "next": "14.0.3",
-    "ord-tools": "^1.0.0",
+    "ord-tools": "^1.0.5",
     "prisma": "^5.7.0",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18"
   },
   "devDependencies": {
@@ -25,10 +33,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^1.0.3"
   }
 }
