fix: bugs fixed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,9 @@
         "bitcoinjs",
         "deployers",
         "depr",
+        "Psbt",
         "tailwindcss",
-        "txid"
+        "txid",
+        "Utxos"
     ]
 }
