--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@bitcoinerlab/secp256k1": "^1.0.5",
     "@prisma/client": "^5.7.0",
     "ahooks": "^3.7.8",
+    "bip32": "^4.0.0",
     "bitcoinjs-lib": "^6.1.5",
+    "bitcoinjs-lib-mpc": "^6.1.16",
     "bitcore-lib": "^10.0.0",
     "dayjs": "^1.11.10",
     "focus-trap-react": "^10.2.3",
     "framer-motion": "^10.16.16",
     "next": "14.0.4",
-    "ord-tools": "^1.0.25",
+    "ord-tools": "^1.0.26",
     "prisma": "^5.7.0",
     "query-string": "^8.1.0",
     "react": "^18",
