fix: update theme

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,11 @@
         "bitcoinjs",
         "deployers",
         "depr",
+        "dper",
         "Psbt",
         "tailwindcss",
         "txid",
+        "unisat",
         "Utxos"
     ]
 }
