--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18",
     "react-confetti": "^6.1.0",
     "react-dom": "^18",
+    "react-tooltip": "^5.26.0",
     "swr": "^2.2.4"
   },
   "devDependencies": {
