--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "^1.0.5",
+    "@ducanh2912/next-pwa": "^10.2.5",
     "@prisma/client": "^5.7.0",
     "ahooks": "^3.7.8",
     "bip32": "^4.0.0",
@@ -44,6 +45,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "vitest": "^1.0.3"
+    "vitest": "^1.0.3",
+    "webpack": "^5.90.1"
   }
 }
