--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5",
-    "vitest": "^1.0.3",
-    "webpack": "^5.90.1"
+    "vitest": "^1.0.3"
   }
 }
