fix: update styles

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "{op:depr}",
-  "short_name": "depr",
+  "name": "{op:dper}",
+  "short_name": "dper",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
