--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@bitcoinerlab/secp256k1": "^1.0.5",
     "@ducanh2912/next-pwa": "^10.2.5",
     "@prisma/client": "^5.7.0",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
     "ahooks": "^3.7.8",
     "bip32": "^4.0.0",
     "bip322-js": "^1.1.0",
