--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "swr": "^2.2.4"
   },
   "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
