--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-public/sw.js
-public/sw.js.map
-public/workbox*
+/public/sw.js
+/public/sw.js.map
+/public/workbox*
